--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Machine Learning Pillar a los malos",
+  "name": "MachineLearningPillamalos",
   "author": "BBDD-ETSIT",
   "license": "GNU",
   "version": "0.0.0",
