--- a/package.json
+++ b/package.json
@@ -4,18 +4,15 @@
   "license": "GNU",
   "version": "0.0.0",
   "scripts": {
-    "start": "node --no-deprecation rest_server.js"
+    "start": "node rest_server.js"
   },
   "dependencies": {
-    "body-parser": "~1.12.4",
-    "ejs": "^3.0.1",
-    "express": "~4.13.1",
-    "method-override": "^2.3.1",
-    "mocha": "^7.0.1",
-    "mongoose": "^5.8.11",
+    "body-parser": "^1.20.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^7.0.5",
     "mongoose-data-seed": "^2.1.6",
-    "nodemon": "^2.0.2",
-    "popper.js": "^1.16.1",
     "text-cryptography": "^1.1.0"
   }
 }
